[package]
name = "cw-metrics"
version = "0.1.0"
authors = ["tckz <at.tckz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.41.0"
rusoto_cloudwatch = "0.41.0"
clap = "2.33.0"
serde_json = "1.0.41"
serde = "1.0.102"
serde_derive = "1.0.102"
